--- a/cisreg_GWAS/cisreg-GWAS.Rmd
+++ b/cisreg_GWAS/cisreg-GWAS.Rmd
@@ -870,7 +870,7 @@ varScan.file <- file.path(
   result.dir.path["RSAT"], 
   paste(sep = "", parameters$query, "_SOIs_var", ".tsv"))
 download.file(url = varScan.URL, destfile = varScan.file)
-#system(paste("open", result.dir.path["RSAT"]))
+system(paste("open", result.dir.path["RSAT"]))
 
 ```
 
@@ -931,16 +931,16 @@ result <- fromJSON(url)
 
 jaspar2018_pubmedid = "29140473"
 
-#Initialize a vector
+# Initialize a vector
 results_matrix = c()
 matrix_ids = result$results$matrix_id
 
-# Select the candidate matrix_id from variation-scan
+# Create the vector of matrix_id from variation-scan
 varscanMatrix <- varScanJaspar$X.ac_motif
 
-matrix_ids <- intersect.Vector(varscanMatrix, matrix_ids)
+inter.matrix_ids <- intersect.Vector(varscanMatrix, matrix_ids)
 
-for (matrix_id in matrix_ids)
+for (matrix_id in inter.matrix_ids)
 {
   matrix_url <- paste0(api_root,"matrix/", matrix_id,".json")
   matrix_result <- fromJSON(matrix_url)
@@ -971,7 +971,7 @@ varScanJasparTF <- merge(x = jaspar_results,
                          by.y = "X.ac_motif"
 )
 
-#View(varScanJasparTF)
+View(varScanJasparTF)
 
 
 ## Export variation-scan file in tsv format
@@ -1176,43 +1176,9 @@ barplot(sort(table(remap.intersect.SOIs$id), decreasing = TRUE),
 
 
 
-```{r enrichment_barplot_volcanoplot}
-
-par(mfrow=c(1,2))
-enrichmentBarPlot(enrich, 
-                  top = 20,
-                  main = paste("Significance, top 20 categories"),
-                  aRisk = 0.05,
-                  sigDisplayQuantile = 0.95,
-                  col = c("#6699ff", "#ff5050"),
-                  sigType = "q",
-                  #xlab = sigTypeTitle,
-                  beside = TRUE, 
-                  space = 0.1,
-                  cex.names = 0.8,
-                  border = NA,
-                  las = 1)
-
-
-# Display a volcano plot (na.omit() is mandatory as there is NAs in the enrichment data frame).
-enrichmentVolcanoPlot(na.omit(enrich),
-                      main = "Volcano plot",
-                      aRisk = 0.05,
-                      sigDisplayQuantile = 0.95,
-                      col = c("#ff5050", "#6699ff"),
-                      #sigType = "q",
-                      #ylim = c(0,yMax),
-                      xlab = "Effect size",
-                      ylab = "sigTypeTitle",
-                      pch = pch,
-                      cex = 0.8,
-                      las = 1)
-par(mfrow=c(1,1))
-```
-
 
 ```{r dotplot, fig.width=7, fig.height=5, out.width="90%"}
-par(mfrow = c(1, 2))
+#par(mfrow = c(1, 2))
 # Display a dot plot.
 enrichmentDotPlot(enrich, 
                   top = 20,
@@ -1232,9 +1198,8 @@ enrichmentDotPlot(enrichNeg,
                   minCircleSize = 0.5,
                   inches = 1 / 4,
                   xlab    = "Mapped peaks ratio")
-par(mfrow=c(1, 2))
-## arrange the stored plots
-#grid.arrange(A, B, ncol = 2)
+#par(mfrow=c(1, 2))
+
 ```
 
 
@@ -1270,7 +1235,7 @@ write.table(x = varscan.with.peaks,
               sep = "\t",
               row.names = FALSE,
               col.names = TRUE)
-system(paste("open", result.dir.path["rSNPs"]))
+#system(paste("open", result.dir.path["rSNPs"]))
 
 ```
 
