--- a/cisreg_GWAS/cisreg-GWAS.Rmd
+++ b/cisreg_GWAS/cisreg-GWAS.Rmd
@@ -413,7 +413,7 @@ In total, we found `r length(DArsIDs)` **TagSNPs** from GWAS catalog.
 
 # Find the genomic tag SNPs informations
 
-snpmart = useMart(biomart = "ENSEMBL_MART_SNP", dataset="hsapiens_snp") # BioMart database and dataset to use.
+snpmart = useMart(biomart = "ENSEMBL_MART_SNP", dataset = "hsapiens_snp") # BioMart database and dataset to use.
 tagSNPsInfo <- getBM(attributes = c('chr_name', 
                                     'refsnp_id',
                                     'chrom_start', 
@@ -529,7 +529,7 @@ In this section, we gathering the informations about the SNPs (disease-associate
 ```{r LD_biomart_annotation}
 ## biomaRt annotation
 message("Gathering information from Ensembl BioMart for ", nbSNPs," SNPs")
-snpmart = useMart(biomart = "ENSEMBL_MART_SNP", dataset="hsapiens_snp") # BioMart database and dataset to use.
+snpmart = useMart(biomart = "ENSEMBL_MART_SNP", dataset = "hsapiens_snp") # BioMart database and dataset to use.
 snpInfo <- getBM(attributes = c('refsnp_source',
                                 'chr_name',
                                 'chrom_start',
@@ -848,15 +848,15 @@ download.file(url = varSeq.URL, destfile = varSeq.file)
 
 ## Variation-scan
 message("Scanning variant alleles with motifs via RSAT REST services")
-varScan <- POST(file.path(parameters$RsatRestUrl, "variation-scan", "Homo_sapiens", "GRCh38"),
+varScan <- POST(file.path(parameters$RsatRestUrl, "variation-scan", "Homo_sapiens", "GRCh38", "uth_pval", "lth_pval_ratio"),
                 body = list(
                   i_string = varSeq.server.path,
                   i_string_type = 'piping',
                   m_string = parameters$motifDB.URL,
                   m_string_type = "url",
                   m_format =  "transfac"),
-                  uth_pval = 0.004,
-                  lth_pval_ratio = 100,
+                  #uth_pval = 0.004,
+                  #lth_pval_ratio = 100,
                   add_headers("Accept" = "application/json"))
 #                add_headers("Accept" = "text/plain"))
                 
@@ -872,7 +872,7 @@ varScan.file <- file.path(
   result.dir.path["RSAT"], 
   paste(sep = "", parameters$query, "_SOIs_var", ".tsv"))
 download.file(url = varScan.URL, destfile = varScan.file)
-system(paste("open", result.dir.path["RSAT"]))
+#system(paste("open", result.dir.path["RSAT"]))
 
 ```
 
@@ -907,15 +907,15 @@ varScanJaspar <- varScanJaspar[, varscanColumns]
 
 # Filter variation-scan result by pval = 1e-04 and pval_ratio = 100
 
-varScanJaspar <- subset(varScanJaspar,
-              best_pval <=  1e-03)
+#varScanJaspar <- subset(varScanJaspar,
+              #best_pval <=  1e-03)
 
 #View(var)
 ```
 
 
 
-## Assignation of TF from JASPAR with the corresponding motif in RSAT variation-scan
+### Assignation of TF from JASPAR with the corresponding motif in RSAT variation-scan
 
 In this section, we download the Jaspar motifs identifier and  corresponding transcription factor (TF) names. We need these data for to compare and select the TF names correspending their motifs in variation-scan results.
 
@@ -997,7 +997,7 @@ write.table(x = varScanJasparTF,
 ```
 
 
-## Distribution of variation-scan score
+### Distribution of variation-scan score
 
 ```{r varscan_score_distributions, fig.width=8, fig.height=6, out.width="95%", fig.cap = paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Distributions of scores returned by variation-scan.** **A.** P-value ratio. **B.** best and worst p-value. **C.** emphazise the differences between  best and worst weight ")}
 
@@ -1091,8 +1091,7 @@ barplot(sort(table(varScanJasparTF$name), decreasing = TRUE),
 
 
 
-
-### ReMap 
+## ReMap 
 
 The ReMap catalog [@Griffon:2015en, @Cheneby:2018ix] is an integrative analysis of transcriptional regulators ChIP-seq experiments from both Public and Encode datasets [@ENCODEProjectConsortium:2012gc]. We used the `ReMapEnrich` package to identify the significant enriched region from ReMap catalog conrresponding of the TFBS altered by the potential regulatory SNPs.
 
@@ -1248,56 +1247,86 @@ write.table(x = varscan.with.peaks,
 ```
 
 
+## Regulation of gene expression
+
+In this section, we analyse the potentially reguled genes by the SOIs.
+
+```{r}
+# Get Ensembl gene features
+
+#snpInfo$ensembl_gene_stable_id
+
+ensembl = useMart(biomart = "ENSEMBL_MART_ENSEMBL", dataset = "hsapiens_gene_ensembl") # BioMart database and dataset to use.
+geneInfo <- getBM(attributes = c('chromosome_name', 
+                                    'start_position',
+                                    'end_position',
+                                    'ensembl_gene_id',
+                                    'ensembl_gene_id_version',
+                                    'hgnc_symbol',
+                                    'entrezgene',
+                                    'go_id',
+                                    'description'
+                                    ), 
+                     filters =  "ensembl_gene_id", 
+                     values = snpInfo$ensembl_gene_stable_id, 
+                     mart = ensembl)
+#View(geneInfo)
+
+# Remove duplicated gene
+geneInfo.uniq <- geneInfo[!duplicated(geneInfo$start_position),]
+
+#View(geneInfo.uniq)
+```
 
 
-## Exploring tissue-specific gene enrichment
+### Exploring tissue-specific gene enrichment
 
 In this section, we calculate the enrichment of tissue-specific genes in an input the candidate gene set corresponding to the potential regulatory SNPs using the `TissueEnrich package` [@jain_tissueenrich:_2018].
 
 
 ```{r tissueEnrich, fig.width=8, fig.height=6, out.width="95%", fig.cap = paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Tissue-specific gene enrichment.** The x-axis shows each of the tissues, and the y-axis represents the tissue-specific gene enrichment (−Log10(P−Value)) values and the y-axis shows each of the tissues.")}
 
-# inputGenes <- unique(na.omit(varscan.inter.SOIs$GENCODE_name))
-# 
-# gs<-GeneSet(geneIds=inputGenes,organism="Homo Sapiens",geneIdType=SymbolIdentifier())
-# output<-teEnrichment(inputGenes = gs)
-# 
-# seEnrichmentOutput<-output[[1]]
-# enrichmentOutput<-setNames(data.frame(assay(seEnrichmentOutput),row.names = rowData(seEnrichmentOutput)[,1]), colData(seEnrichmentOutput)[,1])
-# enrichmentOutput$Tissue<-row.names(enrichmentOutput)
-# 
-# 
-# ## ggplot
-# ggplot(enrichmentOutput,aes(x=reorder(Tissue,-Log10PValue),y=Log10PValue,label = Tissue.Specific.Genes,fill = Tissue))+
-#       geom_bar(stat = 'identity')+
-#       labs(x='', y = '-LOG10(P-Adjusted)')+
-#       theme_bw()+
-#       #coord_flip() +
-#       theme(legend.position="none")+
-#       theme(plot.title = element_text(hjust = 0.5,size = 20),
-#             axis.title = element_text(size=15))+
-#       theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1), 
-#             panel.grid.major= element_blank(),
-#             panel.grid.minor = element_blank()) +
-#       ggtitle("A. Tissue-specific gene enrichment (−log10(p-value))")
-#   
+inputGenes <- unique(na.omit(geneInfo.uniq$hgnc_symbol))
+
+gs<-GeneSet(geneIds=inputGenes,organism="Homo Sapiens",geneIdType=SymbolIdentifier())
+output<-teEnrichment(inputGenes = gs)
+
+seEnrichmentOutput<-output[[1]]
+enrichmentOutput<-setNames(data.frame(assay(seEnrichmentOutput),row.names = rowData(seEnrichmentOutput)[,1]), colData(seEnrichmentOutput)[,1])
+enrichmentOutput$Tissue<-row.names(enrichmentOutput)
+
+
+# ggplot
+ggplot(enrichmentOutput,aes(x=reorder(Tissue,-Log10PValue),y=Log10PValue,label = Tissue.Specific.Genes,fill = Tissue))+
+      geom_bar(stat = 'identity')+
+      labs(x='', y = '-LOG10(P-Adjusted)')+
+      theme_bw()+
+      #coord_flip() +
+      theme(legend.position="none")+
+      theme(plot.title = element_text(hjust = 0.5,size = 20),
+            axis.title = element_text(size=15))+
+      theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1),
+            panel.grid.major= element_blank(),
+            panel.grid.minor = element_blank()) +
+      ggtitle("A. Tissue-specific gene enrichment (−log10(p-value))")
 
 
 
-# B <- ggplot(enrichmentOutput,aes(x=reorder(Tissue,-fold.change),y=fold.change,label = Tissue.Specific.Genes,fill = Tissue))+
-#       geom_bar(stat = 'identity')+
-#       labs(x='', y = 'Fold change')+
-#       theme_bw()+
-#       #coord_flip() +
-#       theme(legend.position="none")+
-#       theme(plot.title = element_text(hjust = 0.5,size = 20),
-#             axis.title = element_text(size=15))+
-#       theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1),
-#             panel.grid.major= element_blank(),
-#             panel.grid.minor = element_blank()) +
-#       ggtitle("B. Tissue-specific gene enrichment (fold change)")
-# 
-# multiplot(A, B, layout = matrix(c(1, 2), nrow  = 2))
+
+ggplot(enrichmentOutput,aes(x=reorder(Tissue,-fold.change),y=fold.change,label = Tissue.Specific.Genes,fill = Tissue))+
+      geom_bar(stat = 'identity')+
+      labs(x='', y = 'Fold change')+
+      theme_bw()+
+      #coord_flip() +
+      theme(legend.position="none")+
+      theme(plot.title = element_text(hjust = 0.5,size = 20),
+            axis.title = element_text(size=15))+
+      theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1),
+            panel.grid.major= element_blank(),
+            panel.grid.minor = element_blank()) +
+      ggtitle("B. Tissue-specific gene enrichment (fold change)")
+
+#multiplot(A, B, layout = matrix(c(1, 2), nrow  = 2))
 
 ```
 
@@ -1309,20 +1338,20 @@ In this section, we calculate the enrichment of tissue-specific genes in an inpu
 The heatmap showing the expression of the significant tissues specific genes across all the tissues.
 
 ```{r heatmap, fig.width=8, fig.height=6, out.width="95%", fig.cap = paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Heatmap of expression profiles of tissue-specific genes.** The tissue enriched have genes with an expression level greater than or equal to 1. Gene expression values are presented either as TPM (transcript per million) that also have at least five-fold higher expression levels in a particular tissue compared to all other tissues.")}
-# seExp<-output[[2]][["Lung"]]
-# exp<-setNames(data.frame(assay(seExp), row.names = rowData(seExp)[,1]), colData(seExp)[,1])
-# exp$Gene<-row.names(exp)
-# exp<-exp %>% gather(Tissue=1:(ncol(exp)-1))
-# 
-# ggplot(exp, aes(key, Gene)) + geom_tile(aes(fill = value),
-#      colour = "white") + scale_fill_gradient(low = "white",
-#      high = "steelblue")+
-#      labs(x='', y = '')+
-#       theme_bw()+
-#       guides(fill = guide_legend(title = "Log2(TPM)"))+
-#       #theme(legend.position="none")+
-#       theme(plot.title = element_text(hjust = 0.5,size = 20),axis.title = element_text(size=15))+
-#       theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1),panel.grid.major= element_blank(),panel.grid.minor = element_blank())
+seExp<-output[[2]][["Urinary Bladder"]]
+exp<-setNames(data.frame(assay(seExp), row.names = rowData(seExp)[,1]), colData(seExp)[,1])
+exp$Gene<-row.names(exp)
+exp<-exp %>% gather(Tissue=1:(ncol(exp)-1))
+
+ggplot(exp, aes(key, Gene)) + geom_tile(aes(fill = value),
+     colour = "white") + scale_fill_gradient(low = "white",
+     high = "steelblue")+
+     labs(x='', y = '')+
+      theme_bw()+
+      guides(fill = guide_legend(title = "Log2(TPM)"))+
+      #theme(legend.position="none")+
+      theme(plot.title = element_text(hjust = 0.5,size = 20),axis.title = element_text(size=15))+
+      theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1),panel.grid.major= element_blank(),panel.grid.minor = element_blank())
 ```
 
 
